#458 - Child Documents: "tags" and "attributes" in sent to POST within child documents are not being saved